force-app/main/default/objects/Partner__c/fields/Accounting_Finance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Finance_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting/Finance Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partners (Accounting/Finance Lead)</relationshipLabel>
    <relationshipName>Partners3</relationshipName>
    <type>Lookup</type>
</CustomField>