force-app/main/default/objects/Partner__c/fields/Accounts_Payable__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is a department, please add department name and email as the contact.</inlineHelpText>
    <label>Accounts Payable Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partners (Accounts Payable Contact)</relationshipLabel>
    <relationshipName>Partners4</relationshipName>
    <type>Lookup</type>
</CustomField>