force-app/main/default/objects/Partner__c/fields/Accounts_Payable_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Name__c</fullName>
    <label>Accounts Payable Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>