force-app/main/default/objects/Partner__c/fields/Branch_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location_Address__c</fullName>
    <label>Number of Branch Locations</label>
    <type>TextArea</type>
</CustomField>