force-app/main/default/objects/Partner__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate of Incorporation</label>
    <type>Checkbox</type>
</CustomField>