force-app/main/default/objects/Partner__c/fields/D_B_Number__c.field-meta.xml
<CustomField>
    <fullName>D_B_Number__c</fullName>
    <label>D&amp;B Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>