force-app/main/default/objects/Partner__c/fields/Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration__c</fullName>
    <label>Deal Registration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>