force-app/main/default/objects/Partner__c/fields/Deal_Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Registration_Expiration_Date__c</fullName>
    <description>Deal Registration Expiration Date</description>
    <label>Deal Registration Expiration Date</label>
    <type>Date</type>
</CustomField>