force-app/main/default/objects/Partner__c/fields/Delivery_Partners__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partners__c</fullName>
    <label>Delivery Partners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Cabling</fullName>
            </value>
            <value>
                <fullName>Rack &amp; Stack</fullName>
            </value>
            <value>
                <fullName>Service Activation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>