force-app/main/default/objects/Partner__c/fields/Delivery_PS_MS_Lead__c.field-meta.xml
<CustomField>
    <fullName>Delivery_PS_MS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery/PS/MS Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partners (Delivery/PS/MS Lead)</relationshipLabel>
    <relationshipName>Partners2</relationshipName>
    <type>Lookup</type>
</CustomField>