force-app/main/default/objects/Partner__c/fields/IT_Help_Desk_Services_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_Help_Desk_Services_Percentage__c</fullName>
    <label>IT Help Desk Services Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>