force-app/main/default/objects/Partner__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Engineer / Manager</fullName>
            </value>
            <value>
                <fullName>Sales / Partner Management</fullName>
            </value>
            <value>
                <fullName>Partner SA / SE</fullName>
            </value>
            <value>
                <fullName>Ops/ Finance</fullName>
            </value>
            <value>
                <fullName>Partner Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>