force-app/main/default/objects/Partner__c/fields/K12_Erate_Focus__c.field-meta.xml
<CustomField>
    <fullName>K12_Erate_Focus__c</fullName>
    <label>K12/E-rate Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>