force-app/main/default/objects/Partner__c/fields/Key_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitors__c</fullName>
    <label>Key Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arista</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
            <value>
                <fullName>Fortinet</fullName>
            </value>
            <value>
                <fullName>Juniper</fullName>
            </value>
            <value>
                <fullName>Meraki</fullName>
            </value>
            <value>
                <fullName>Mist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>