force-app/main/default/objects/Partner__c/fields/Key_Competitors_Other__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitors_Other__c</fullName>
    <label>Key Competitors Other</label>
    <type>TextArea</type>
</CustomField>