force-app/main/default/objects/Partner__c/fields/Key_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Email__c</fullName>
    <label>Key Contact Email</label>
    <type>Email</type>
</CustomField>