force-app/main/default/objects/Partner__c/fields/Key_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Phone__c</fullName>
    <label>Key Contact Phone</label>
    <type>Phone</type>
</CustomField>