force-app/main/default/objects/Partner__c/fields/Key_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact_Title__c</fullName>
    <label>Key Contact Title</label>
    <length>25</length>
    <type>Text</type>
</CustomField>