force-app/main/default/objects/Partner__c/fields/Networking_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Networking_Revenue__c</fullName>
    <label>Networking Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>