force-app/main/default/objects/Partner__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <label>Number of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10000+</fullName>
            </value>
            <value>
                <fullName>5001-10000</fullName>
            </value>
            <value>
                <fullName>2501-5000</fullName>
            </value>
            <value>
                <fullName>1001-2500</fullName>
            </value>
            <value>
                <fullName>501-1000</fullName>
            </value>
            <value>
                <fullName>201-500</fullName>
            </value>
            <value>
                <fullName>1-200</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
                <isActive>false</isActive>
                <label>1001-5000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>