force-app/main/default/objects/Partner__c/fields/Other_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Other_Percentage__c</fullName>
    <label>Other Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>