force-app/main/default/objects/Partner__c/fields/Partner_Address__c.field-meta.xml
<CustomField>
    <fullName>Partner_Address__c</fullName>
    <formula>Partner_Street__c &amp; &apos;, &apos; &amp; Partner_City__c &amp; &apos;, &apos; &amp; TEXT(Partner_State__c) &amp; &apos; &apos; &amp; Partner_Zip__c &amp; &apos;, &apos; &amp; TEXT(Partner_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Address</label>
    <type>Text</type>
</CustomField>