force-app/main/default/objects/Partner__c/fields/Partner_City__c.field-meta.xml
<CustomField>
    <fullName>Partner_City__c</fullName>
    <label>Partner City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>