force-app/main/default/objects/Partner__c/fields/Partner_Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Partner contact signed means that the Partner has been approved. If not approved, the Partner is deemed &apos;in process&apos;</description>
    <inlineHelpText>Has the partner been signed? If so, check the box, if not, the partner is &apos;in process&apos;</inlineHelpText>
    <label>Partner Contract Signed</label>
    <type>Checkbox</type>
</CustomField>