force-app/main/default/objects/Partner__c/fields/Partner_Home_Office__c.field-meta.xml
<CustomField>
    <fullName>Partner_Home_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field used to indicate the partner home office</inlineHelpText>
    <label>Partner Home Office</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>