force-app/main/default/objects/Partner__c/fields/Partner_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Partner_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Initiated</label>
    <type>Checkbox</type>
</CustomField>