force-app/main/default/objects/Partner__c/fields/Partner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo__c</fullName>
    <description>Store Logo URL i.e. http://www.mystore.com/logos/logotype1.jpg</description>
    <inlineHelpText>This is the location of the store&apos;s logo</inlineHelpText>
    <label>Partner Logo</label>
    <type>Url</type>
</CustomField>