force-app/main/default/objects/Partner__c/fields/Partner_of_Choice__c.field-meta.xml
<CustomField>
    <fullName>Partner_of_Choice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner of Choice</label>
    <type>Checkbox</type>
</CustomField>