force-app/main/default/objects/Partner__c/fields/Partner_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the main contact for all Deal Registered Leads?</inlineHelpText>
    <label>Partner Sales Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partners (Partner Sales Lead)</relationshipLabel>
    <relationshipName>Partners3</relationshipName>
    <type>Lookup</type>
</CustomField>