force-app/main/default/objects/Partner__c/fields/Partner_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Street_2__c</fullName>
    <description>Partner Street 2</description>
    <label>Partner Street 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>