force-app/main/default/objects/Partner__c/fields/Partner_Street__c.field-meta.xml
<CustomField>
    <fullName>Partner_Street__c</fullName>
    <label>Partner Street</label>
    <length>150</length>
    <type>Text</type>
</CustomField>