force-app/main/default/objects/Partner__c/fields/Partner_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Partner_Total_Revenue__c</fullName>
    <label>Partner Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>