force-app/main/default/objects/Partner__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Managed Service Provider</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Delivery Services Partner</fullName>
            </value>
            <value>
                <fullName>Installation Partner</fullName>
                <isActive>false</isActive>
                <label>Installation Partner</label>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
                <isActive>false</isActive>
                <label>Referral Partner</label>
            </value>
            <value>
                <fullName>Systems Integrator</fullName>
                <isActive>false</isActive>
                <label>Systems Integrator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>