force-app/main/default/objects/Partner__c/fields/Partner_Website__c.field-meta.xml
<CustomField>
    <fullName>Partner_Website__c</fullName>
    <description>Partner website</description>
    <label>Partner Website</label>
    <type>Url</type>
</CustomField>