force-app/main/default/objects/Partner__c/fields/Partner_Zip__c.field-meta.xml
<CustomField>
    <fullName>Partner_Zip__c</fullName>
    <label>Partner Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>