force-app/main/default/objects/Partner__c/fields/Pre_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Sales Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pre-Sales Lead</relationshipLabel>
    <relationshipName>Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>