force-app/main/default/objects/Partner__c/fields/Product_Resale_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Product_Resale_Percentage__c</fullName>
    <label>Product Resale Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>