force-app/main/default/objects/Partner__c/fields/Purchasing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchasing Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partners (Purchasing Lead)</relationshipLabel>
    <relationshipName>Partners4</relationshipName>
    <type>Lookup</type>
</CustomField>