force-app/main/default/objects/Partner__c/fields/Resale_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Resale_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale Certificate</label>
    <type>Checkbox</type>
</CustomField>