force-app/main/default/objects/Partner__c/fields/Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Partners</relationshipLabel>
    <relationshipName>Partners</relationshipName>
    <type>Lookup</type>
</CustomField>