force-app/main/default/objects/Partner__c/fields/Service_Delivery_Lead__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Delivery Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partners (Service Delivery Lead)</relationshipLabel>
    <relationshipName>Partners2</relationshipName>
    <type>Lookup</type>
</CustomField>