force-app/main/default/objects/Partner__c/fields/Services_Resale_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Services_Resale_Percentage__c</fullName>
    <label>Services Resale Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>