force-app/main/default/objects/Partner__c/fields/Signatory__c.field-meta.xml
<CustomField>
    <fullName>Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who signs the Order Forms?</inlineHelpText>
    <label>Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partners (Signatory)</relationshipLabel>
    <relationshipName>Partners5</relationshipName>
    <type>Lookup</type>
</CustomField>