force-app/main/default/objects/Partner__c/fields/Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Email__c</fullName>
    <label>Signatory Email</label>
    <type>TextArea</type>
</CustomField>