force-app/main/default/objects/Partner__c/fields/Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Name__c</fullName>
    <label>Signatory Name(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>