force-app/main/default/objects/Partner__c/fields/SPIFF_Payout__c.field-meta.xml
<CustomField>
    <fullName>SPIFF_Payout__c</fullName>
    <inlineHelpText>Please indicate if the Partner requires Spiffs to be paid directly to the individuals or to corporate.</inlineHelpText>
    <label>SPIFF Payout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment direct to Partner</fullName>
            </value>
            <value>
                <fullName>Payment direct to Sales &amp; SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>