force-app/main/default/objects/Partner__c/fields/Strategic_Priority_1__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priority_1__c</fullName>
    <label>Strategic Priority 1</label>
    <type>TextArea</type>
</CustomField>