force-app/main/default/objects/Partner__c/fields/Strategic_Priority_2__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priority_2__c</fullName>
    <label>Strategic Priority 2</label>
    <type>TextArea</type>
</CustomField>