force-app/main/default/objects/Partner__c/fields/Strategic_Priority_3__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priority_3__c</fullName>
    <label>Strategic Priority 3</label>
    <type>TextArea</type>
</CustomField>