force-app/main/default/objects/Partner__c/fields/Teaming_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Teaming_Agreement__c</fullName>
    <label>Teaming Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>