force-app/main/default/objects/Partner__c/fields/Tech_Lead__c.field-meta.xml
<CustomField>
    <fullName>Tech_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the lead SA to reach out to for all deals?</description>
    <label>Tech Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partners (Tech Lead)</relationshipLabel>
    <relationshipName>Partners1</relationshipName>
    <type>Lookup</type>
</CustomField>